@startuml
'https://plantuml.com/class-diagram

class Article{
-id : int
-titre : string
-contenu : text
-createdAt : datetime
-slug : string
}

class Categorie{
-id : int
-titre : string
-slug : string
}
class utilisateur{
-id: int
-nom : string
-prenom :string
-pseudo :string
}
class commentaire{
-id: int
-contenu : string
-dateCreation : datetime
}


Article"0..*" -- "0..1"Categorie
Article"1..1"--"0..*"commentaire
utilisateur"0..1"--"0..*"commentaire


@enduml